@@ -9,7 +9,7 @@
 JAVAC = javac ${JAVACFLAGS}
 #JAVAC = jikes ${JIKESFLAGS}
 
-JAVACFLAGS = ${FLAGS} -target 1.3 -source 1.3 ${FLAGS}
+JAVACFLAGS = -target 1.3 -source 1.3 ${FLAGS}
 JIKESFLAGS = -target 1.3 +Pno-shadow ${FLAGS}
 FLAGS = -g -nowarn
 
